# geo-swarm-hardware

./: .gitignore  README.md
cad-files/: Spray_pen_holder_part_1_M4_array_holes.STL  compressor_mount_1.1.STL  leg_bracing_1.4.STL  leg_connector_1.3.STL  rpi_rear_mount_1.2.STL  servo_back_mount_1.2.STL  servo_mount_2.1.STL  sprayer_control_horn_1.2.STL  sprayer_extender_2.1.STL
ros2-ws/install/: local_setup.sh  setup.sh
ros2-ws/log/: latest_build
ros2-ws/src/: servo_control.py
ros2-ws/src/custom_interfaces/: CMakeLists.txt  package.xml
ros2-ws/src/custom_interfaces/action/: DroneNavigateToWaypoint.action
ros2-ws/src/custom_interfaces/msg/: PerceptionStuff.msg
ros2-ws/src/custom_interfaces/srv/: PathPlannerPaint.srv  PathPlannerSpin.srv  PathPlannerTower.srv  PathPlannerUp.srv  ServoControl.srv
ros2-ws/src/custom_srv_interfaces/: CMakeLists.txt  package.xml
ros2-ws/src/custom_srv_interfaces/msg/: PerceptionStuff.msg
ros2-ws/src/custom_srv_interfaces/srv/: PathPlannerPaint.srv  PathPlannerSpin.srv  PathPlannerUp.srv  PathPlanner_Paint.srv  PathPlanner_Up.srv  ServoAngleControl.srv
ros2-ws/src/laptop_master/: package.xml  setup.cfg  setup.py
ros2-ws/src/laptop_master/laptop_master/: dummy_action_server_node.py  dummy_positionpub_node.py  dummy_pub_node.py  laptop_master_node.py
ros2-ws/src/laptop_master/laptop_master/behaviours/: bb_logger.py  dummy_blackboard_reader.py  follow_circle_waypoints.py  follow_next_waypoint.py  follow_waypoints.py  get_waypoints_circle.py  get_waypoints_down_one_level.py  get_waypoints_from_service.py  get_waypoints_one_paint_blob.py  get_waypoints_to_tower.py  get_waypoints_tower.py  get_waypoints_up.py  land.py  land_drone.py  local_position_2BB.py  perception_2BB.py  sprayer.py
ros2-ws/src/laptop_master/laptop_master/decorators/: repeat_until_condition.py  run_on_condition.py
ros2-ws/src/laptop_master/launch/: test_laptop_master.launch.py
ros2-ws/src/monitor/: CMakeLists.txt  package.xml
ros2-ws/src/monitor/src/: monitor.py
ros2-ws/src/path_planning/: CMakeLists.txt  package.xml  setup.py
ros2-ws/src/path_planning/path_planning/: path_planning_node.py  plan_path_paint_test.py  trajectory_test.py
ros2-ws/src/perception/: package.xml  setup.py
ros2-ws/src/perception/perception/: drone_perception.py  perception_stuff.py  tower_detector.py
ros2-ws/src/px4_ros_com/src/examples/offboard_py/: offboard_control.py
ros2-ws/src/ros2-vicon-bridge/launch/: all_segments.launch.py
ros2-ws/src/rpi_master/: package.xml  setup.cfg  setup.py
ros2-ws/src/rpi_master/rpi_master/: rpi_master_node.py  rpi_master_utils.py  rpi_test_node.py
ros2-ws/src/servo/: package.xml  setup.py
ros2-ws/src/servo/launch/: servo_node.launch.py
ros2-ws/src/servo/servo/: servo_node.py
ros2-ws/src/servo/srv/: ServoControl.srv
ros2-ws/src/simple_rpi/: package.xml  setup.cfg  setup.py
ros2-ws/src/simple_rpi/launch/: percept_actuat.launch.py
ros2-ws/src/simple_rpi/simple_rpi/: dirt_detector.py  dummy_pub_node.py  dummy_servo_srv_node.py  perception_stuff.py  simple_rpi_node.py  tower_detector.py
ros2-ws/src/simple_rpi/simple_rpi/behaviours/: bb_logger.py  detect_paint.py  in_range.py  perception_2BB.py  turn_off_sprayer.py  turn_on_sprayer.py
scripts/: rpi_bringup.sh
