<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>laptop_master</name>
  <version>0.0.0</version>
  <description>"Node with behaviour tree for drone autonomous logic"</description>
  <maintainer email="alexandrazj28@gmail.com">ale</maintainer>
  <license>Apache-2.0</license>

  <!-- Node depends on these libraries -->
  <depend>rclpy</depend>
  <depend>py_trees</depend>
  <depend>py_trees_ros</depend>
  <depend>px4_msgs</depend>
  <depend>custom_srv_interfaces</depend>
  <depend>behaviours</depend>

  <!-- Custom service dependencies -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rosidl_default_runtime</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
