<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>servo</name>
  <version>0.0.0</version>
  <description>Package that controls a servo by sending corresponding PWM signal</description>
  <maintainer email="alexandrazj28@gmail.com">Alexandra</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Servo node depends on these libraries -->
  <depend>rclpy</depend>
  <depend>gpiozero</depend>

  <!-- Custom service dependencies -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rosidl_default_runtime</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
